--- a/Entregable2/css/styleCardSmall.css
+++ b/Entregable2/css/styleCardSmall.css
@@ -49,16 +49,14 @@ h1, h2, h3, p, a{
 body {
     font-family: Verdana, sans-serif; 
     margin:0;
-    background: #0C0228;
 }
 
 .juego-recomendado .contenedor-card-small,
 .juego-accion .contenedor-card-small,
 .juego-multijugador .contenedor-card-small,
 .juego-deportes .contenedor-card-small{
-    padding: 10px;
-    overflow: hidden;
-    
+    padding: 40px;
+    overflow: hidden;    
     justify-content: center;
     display: flex;
 }
@@ -75,6 +73,8 @@ body {
     border-radius: 23px;
     border-width: 3px;
     border-style: solid;
+    
+    background: #0C0228;
 }
 
 .juego-recomendado .card-small .img-juego-small img,
@@ -85,8 +85,9 @@ body {
     height: 100%;
     height: 234px;
     width: 296px;
-    position: relative;
+    position: initial;
     object-fit:cover;
+    background: #0C0228;
 }
 
 .juego-recomendado .contenedor-card-small button,
