agregado variable css

--- a/Entregable2/template/header.html
+++ b/Entregable2/template/header.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/reset.css" type="text/css">
-    <!-- <link rel="stylesheet" href="../css/style.css" type="text/css"> -->
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
     <link rel="stylesheet" href="./header.css" type="text/css">
     <title>Document</title>
 </head>
 
-<!-- <header>
+<header>
 	<nav class="site-nav">
 		<img src="../img/icons/Icon-HamMenu.svg" alt="nav button" class="HamMenu-Button">
 		<div class="HamMenu">
@@ -50,7 +50,7 @@
 				<li><a href="#">Link 4</href></a></li>
 			  </ul>
 	</nav>
-  </header> -->
+  </header>
 
   <header class="header">
 	<section class="container-nav-bar">
