--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -1,4 +1,9 @@
 /*CSS RESET*/
+:root {
+  --backcolor: #c9b5b5;
+}
+
+
 * {
   margin: 0;
   padding: 0;
@@ -58,7 +63,7 @@ body {font-family: Verdana, sans-serif;
 header {
   width: 100%;
   height: 100%;
-  background-color: orange;
+  background-color: var(--backcolor);
   background-position: center;
   background-size: cover;
   
