--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -91,7 +91,7 @@ body {font-family: Verdana, sans-serif;
 header {
   width: 100%;
   height: 100%;
-  background-color: var(--backcolor);
+  background-color: var(--Color-Primary);
   background-position: center;
   background-size: cover;
   
