--- a/Entregable2/css/styleCards.css
+++ b/Entregable2/css/styleCards.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    font-family: Verdana, sans-serif; 
+    /* font-family: Verdana, sans-serif; */ /* boludo lo que estube hasta que encontre esta regla, no sabia porque no me respetaba la font family que yo decidia y era porque esta la pisaba */
     margin:0;
 }
 
