--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -63,7 +63,7 @@ body {
 }
 
 /*GRID*/
-.contenedor{
+body{
   /*width: 90%;
   max-width: 1064px;
   margin: 20px 50px;*/
@@ -73,11 +73,12 @@ body {
 
   grid-template-rows: repeat(7, auto);
   grid-template-areas:  "header header header"
-                        ". novedades ."
+                        "novedades novedades novedades"
                         ". recomendado ."
                         ". accion ."
                         ". multijugador ."
-                        ". deportes .";
+                        ". deportes ."
+                        "footer footer footer";
 }
 
 .novedades{
@@ -362,6 +363,11 @@ div.categoria .icon{
 }
 
 /*----------------------FOOTER-------------------------------------*/
+
+footer{
+  grid-area: footer;
+}
+
 .contenedor-ppal-footer{
   display: flex;
   justify-content: space-between;
