--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -46,7 +46,7 @@
 }
 
 h1, h2, h3, p, a, li{
-  color:#FFFFFF;
+  color:var(--Color-GreyL3);
 }
 
 li {
@@ -63,42 +63,36 @@ body {
 }
 
 /*GRID*/
-.contenedor{
+body{
   /*width: 90%;
   max-width: 1064px;
   margin: 20px 50px;*/
   display: grid;
   grid-gap: 20px;
   grid-template-columns: 70px 1140px 70px;
-
+  justify-content: center;
   grid-template-rows: repeat(6, auto);
-  grid-template-areas:  ". novedades ."
-                        ". recomendado ."
-                        ". accion ."
-                        ". multijugador ."
-                        ". deportes .";
+  grid-template-areas:  "header header header"
+                        "novedades novedades novedades"
+                        ". contenedor ."
+                        "footer footer footer";
 }
 
-.novedades{
+.contenedor-novedades{
   grid-area: novedades;
 }
+.contenedor{
+  grid-area: contenedor;
+}
+.footer{
+  grid-area: footer;
+}
 
-.carruseles-categorias-recomendado{
-  
-  grid-area: recomendado;
+.header{
+  grid-area: header;
 }
-.carruseles-categorias-accion{
- 
-  grid-area: accion;
-}
-.carruseles-categorias-multijugador{
-  
-  grid-area: multijugador;
-}
-.carruseles-categorias-deportes{
- 
-  grid-area: deportes;
-}
+
+
 
 /*------------------------------HEADER--------------------------------------------*/
 header {
@@ -216,12 +210,46 @@ a.nav-menu-deployed{
   display: block;
 }
 
-/*-----------------------PREVIEW NOVEDADES-----------------------------------*/
-.novedades{
+/*-------------------------PREVIEW NOVEDADES-----------------------------------*/
+.contenedor-novedades{
   display: flex;
-  align-items: center;
+  justify-content: center;
   flex-wrap: nowrap;
   align-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 611px;
+  background-image: url(/img/img-games/FondoTecno.png);
+  align-items: center;
+}
+
+.contenedor-novedades .titulo-novedades{
+  padding: 20px;
+}
+.contenedor-novedades h1{
+  font-size: 64px;
+}
+.contenedor-novedades .contenedor-card-preview{
+  border: solid;
+  border-color: var(--Color-GreyL3);
+  border-radius: 25px;
+  width: 80%;
+}
+
+.contenedor-novedades .contenedor-card-preview img{
+  border-radius: 22px 0px 0px 22px;
+  height: 100%;
+
+}
+
+.contenedor-novedades .contenedor-card-preview{
+  display: flex;
+  align-items: right;
+  flex-direction: row;
+}
+
+.contenedor-novedades .contenedor-texto-preview{
+  display:flex;
   flex-direction: column;
 }
 
@@ -236,7 +264,7 @@ a.nav-menu-deployed{
 }
 
 .contenedor-titulo-controles h3{
-  color: #FFFFFF;
+  color:var(--Color-GreyL3);
   font-size: 30px;
 }
 
@@ -244,7 +272,7 @@ a.nav-menu-deployed{
 .contenedor-titulo-controles .indicadores-accion button,
 .contenedor-titulo-controles .indicadores-multijugador button,
 .contenedor-titulo-controles .indicadores-deportes button{
-  background: #FFFFFF;
+  background: var(--Color-GreyL3);
   height: 5px;
   width: 10px;
   cursor: pointer;
