--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -78,10 +78,6 @@ p.bold{
   font-weight: 700;
 }
 
-li {
-  font-size: small;
-}
-
 body, input, textarea, button{
   font-family: var(--Font-Type, sans-serif);/* esto esta asi porque sino el boton no heredaba el font */
 }
@@ -195,7 +191,6 @@ ul.nav-menu-deployed{
 .nav-menu li, .nav-menu-usr li, ul.nav-menu-deployed li, ul.nav-menu-deployed li a{
   display: none;
   line-height: 30px;
-  margin: 20px 10px 0;
   transition: all .5s;
 }
 
@@ -240,10 +235,12 @@ div.categoria{
 }
 
 div.categoria .icon{
+  display: flex;
   flex-shrink: 0;
   width: 60px;
-  margin: 20px;
-  text-align: center;
+  margin: 10px;
+  align-content: center;
+  justify-content: center;
 }
 
 div.categoria h3{
