--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -2,6 +2,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700&display=swap');
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 700,
+  'GRAD' 0,
+  'opsz' 48
+}
 
 :root {
   --Font-Type: 'Inter';
@@ -150,11 +157,14 @@ header {
 }
 
 .bar-btn, .usr-btn{
-  font-size: 25px;
-  color: #FFFFFF;
   margin-left: 20px;
   cursor: pointer;
   position: absolute;
+}
+
+.bar-btn .material-symbols-outlined, .usr-btn .material-symbols-outlined{
+  font-size: xxx-large;
+  color: var(--Color-GreyS3);
 }
 
 .usr-btn{
