Mobili First, se unifican paginas de estilos generales y la de cards.

--- a/Entregable2/css/styleCards.css
+++ b/Entregable2/css/styleCards.css
@@ -62,8 +62,7 @@ h1, h2, h3, p, a{
 .juego-accion .contenedor-card-small,
 .juego-multijugador .contenedor-card-small,
 .juego-deportes .contenedor-card-small{
-    padding: 40px;
-    overflow: hidden;    
+    padding: 40px;   
     justify-content: center;
     display: flex;
 }
@@ -139,7 +138,7 @@ h1, h2, h3, p, a{
     width: 566px;
     position: initial;
     object-fit:cover;
-    
+    display: none;
 }
 
 .juego-recomendado .contenedor-card-small button,
