--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -56,7 +56,7 @@
   
 }
 
-h1, h2, h3, p, a, li{
+h1, h2, h3, p, li{
   color:var(--Color-GreyL3);
 }
 
@@ -75,7 +75,7 @@ h3{
   font-weight: 500;
 }
 
-p{
+p, a{
   font-size: 16px;
   font-weight: 300;
 }
@@ -93,6 +93,19 @@ body {
   margin:0;
   background: #0C0228;
  
+}
+
+.button-small-primary{
+  width: 140px;
+  height: 40px;
+  border-radius: 10px;
+  border-style: none;
+  background-color: var(--Color-Primary);
+  color: var(--Color-GreyS3);
+}
+
+.button-small-primary h3{
+  color: var(--Color-GreyS3);
 }
 
 ::-webkit-scrollbar {display: none;}
@@ -118,16 +131,6 @@ body{
 .footer{
   grid-area: footer;
 }
-
-.button-small-primary{
-  width: 150px;
-  height: 50px;
-  left: 0px;
-  top: 0px;
-  border-radius: 10px;
-  background-color: var(--Color-SecondaryL2);
-}
-
 
 /*------------------------------HEADER--------------------------------------------*/
 header {
@@ -167,7 +170,6 @@ header {
 }
 
 .bar-btn, .usr-btn{
-  margin-left: 30px;
   cursor: pointer;
   position: absolute;
 }
@@ -183,7 +185,7 @@ header {
   width: 60px;
   height: 45px;
   position: relative;
-  margin: 50px auto;
+  margin: auto 30px;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
@@ -278,6 +280,35 @@ header {
   transition: all;
   z-index: 5000;
 }
+
+.nav-menu-usr ul li{
+  padding: 10px;
+  text-align: left;
+  
+}
+
+.nav-menu-usr ul li a{
+  color: var(--Color-GreyS3);
+}
+
+.nav-menu-usr, .nav-menu-usr ul{
+  text-align: center;
+}
+.nav-menu-usr ul{
+  width: fit-content;
+}
+
+.nav-menu-usr{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: fit-content;
+  background-color: var(--Color-GreyL2);
+  width: auto;
+  padding: 20px;
+  border-bottom-left-radius: 25px;
+}
+
 .nav-menu{
   width: auto;
 }
@@ -295,7 +326,7 @@ ul.nav-menu-deployed{
 }
 
 
-.nav-menu li, .nav-menu-usr li, ul.nav-menu-deployed li, ul.nav-menu-deployed li a{
+.nav-menu li, ul.nav-menu-deployed li, ul.nav-menu-deployed li a{
   display: none;
   line-height: 30px;
   transition: all .5s;
@@ -323,7 +354,7 @@ a.nav-menu-deployed{
   color:aqua;
 }
 
-#check, #checkUsr, #check-menu-deployed, .nav-menu-usr{
+#check, #checkUsr, #check-menu-deployed, .hidden{
   display: none;
 }
 
@@ -332,7 +363,7 @@ a.nav-menu-deployed{
   height: 100vh;
 }
 
-#checkUsr:checked ~ .nav-menu-usr li, #check:checked ~ .nav-menu li,
+#checkUsr:checked ~ .nav-menu-usr, #check:checked ~ .nav-menu li,
 #check-menu-deployed:checked ~ ul.nav-menu-deployed li a{
   display: block;
 }
