--- a/Entregable2/css/style.css
+++ b/Entregable2/css/style.css
@@ -100,6 +100,7 @@ body {
 /*GRID*/
 body{
   display: grid;
+  overflow: hidden;
   grid-template-columns: 10% 80% 10%;
   justify-content: center;
   grid-template-rows: repeat(6, auto);
@@ -119,8 +120,160 @@ body{
   grid-area: footer;
 }
 
+/*----------------LOADER--------------------------------------------------*/
+.loader{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.75);
+  display:flex;
+}
 
+.wrapper{
+  width:300px;
+  height:60px;
+  position: absolute;
+  left:50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+  
+}
+.circle{
+  width:40px;
+  height:40px;
+  position: absolute;
+  border-radius: 50%;
+  background-image: url(/img/icons/IconoW.png);
+  background-position: center;
+  background-size: cover;
+  left:15%;
+  transform-origin: 50%;
+  animation: circle .5s alternate infinite ease;
+}
 
+@keyframes circle{
+  0%{
+      top:60px;
+      height:5px;
+      border-radius: 50px 50px 25px 25px;
+      transform: scaleX(1.7);
+  }
+  40%{
+      height:20px;
+      border-radius: 50%;
+      transform: scaleX(1);
+  }
+  100%{
+      top:0%;
+  }
+}
+.circle:nth-child(2){
+  left:35%;
+  animation-delay: .2s;
+  background-image: url(/img/icons/IconoA.png);
+}
+.circle:nth-child(3){
+  left:auto;
+  right:15%;
+  animation-delay: .3s;
+  background-image: url(/img/icons/IconoS.png);
+}
+.circle:nth-child(4){
+  left:auto;
+  right:35%;
+  animation-delay: .4s;
+  background-image: url(/img/icons/IconoD.png);
+}
+
+.shadow{
+  width:40px;
+  height:4px;
+  border-radius: 50%;
+  background-color: rgba(0,0,0,.5);
+  position: absolute;
+  top:62px;
+  transform-origin: 50%;
+  z-index: -1;
+  left:15%;
+  filter: blur(1px);
+  animation: shadow .5s alternate infinite ease;
+}
+
+@keyframes shadow{
+  0%{
+      transform: scaleX(1.5);
+  }
+  40%{
+      transform: scaleX(1);
+      opacity: .7;
+  }
+  100%{
+      transform: scaleX(.2);
+      opacity: .4;
+  }
+}
+
+.shadow:nth-child(5){
+  left: 35%;
+  animation-delay: .2s
+}
+
+.shadow:nth-child(6){
+  left:auto;
+  right:15%;
+  animation-delay: .3s;
+}
+
+.shadow:nth-child(7){
+  left:auto;
+  right:35%;
+  animation-delay: .4s;
+}
+
+.progress {
+  height: 15px;
+  width: 100%;
+  border: 1px solid var(--Color-PrimaryL1);
+  border-radius: 5px;
+  background-color: #e6f3fa;
+  margin-bottom: 15px;
+  position: relative;
+  transform: translate(0%, 550%);
+}
+
+.progress-bar {
+  height: 100%;
+  background:var(--Color-Primary);
+  display: flex;
+  align-items: center;
+  transition: width 0.25s;
+  border-radius: 5px;  
+  animation: loader 5s ease;
+}
+
+.progress-bar-text {
+  margin-left: 10px;
+  font-weight: bold;
+  color: #cce7f5;
+}
+
+@keyframes loader{
+  0%{
+      width: 0%;
+  }
+  25%{
+    width: 25%;
+  }
+  50%{
+    width: 50%;
+  }
+  75%{
+    width: 75%;
+  }    
+  100%{
+      width: 100%;
+}
+}
 
 /*------------------------------HEADER--------------------------------------------*/
 header {
@@ -254,13 +407,6 @@ header {
   left: 8px;
 }
 
-/* .bar-btn .material-symbols-outlined, .usr-btn .material-symbols-outlined{
-  font-size: xxx-large;
-  color: var(--Color-GreyS3);
-} */
-
-
-
 .nav-menu, .nav-menu-usr {
   position: absolute;
   width: 30%;
@@ -390,7 +536,6 @@ div.categoria h3{
 .contenedor-novedades .contenedor-card-preview .contenedor-texto-preview .button-preview{
   align-self: center;  
   margin-bottom: 15px;
-  margin-left: 40px;
 }
 
 .contenedor-novedades .contenedor-card-preview .contenedor-texto-preview .btn{
@@ -456,8 +601,8 @@ div.categoria h3{
 .contenedor-titulo-controles .indicadores-multijugador button,
 .contenedor-titulo-controles .indicadores-deportes button{
   background: var(--Color-GreyL3);
-  height: 5px;
-  width: 10px;
+  height: 10px;
+  width: 15px;
   cursor: pointer;
   border: none;
   margin-right: 2px;
